--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
   </head>
   <body>
     <header>
-      <span class = "colmar">COLMAR</span>
-      <span class = "academy">ACADEMY</span>
+      <div class="logo">
+        <img src="/resources/images/ic-logo.svg">
+        <span class = "colmar">COLMAR</span>
+        <span class = "academy">ACADEMY</span>
+      </div>
+
+      <nav>
+        <ul>
+          <li>On campus</li>
+          <li>Online</li>
+          <li>For companies</li>
+          <li>Sign in</li>
+        </ul>
+      </nav>
     </header>
   </body>
 </html>
