start div added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <span class = "colmar">COLMAR</span>
         <span class = "academy">ACADEMY</span>
       </div>
-
       <nav>
         <ul>
           <li>On campus</li>
@@ -21,5 +20,12 @@
         </ul>
       </nav>
     </header>
+    <div class="start">
+      <h2>Learn something new everyday</h2>
+      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+      <nav>
+        <span>Start here</span>
+      </nav>
+    </div>
   </body>
 </html>
