practice div added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="/resources/images/ic-logo.svg">
+        <img src="./resources/images/ic-logo.svg">
         <span class = "colmar">COLMAR</span>
         <span class = "academy">ACADEMY</span>
       </div>
@@ -21,11 +21,24 @@
       </nav>
     </header>
     <div class="start">
-      <h2>Learn something new everyday</h2>
-      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-      <nav>
-        <span>Start here</span>
-      </nav>
+      <div class="left-side">
+        <img src="./resources/images/banner.jpg">
+      </div>
+      <div class="right-side">
+        <h2>Learn something new everyday</h2>
+        <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+        <nav>
+          <span>Start here</span>
+        </nav>
+      </div>
+    </div>
+    <div class="practice">
+      <div class="left-side">
+        <img src="./resources/images/information-main.jpg">
+        <h3>It's doesn't hurt to keep practicing</h3>
+        <p>"Curabitur vitae libero in ipsum porttitor consequat.  Aliquam et commodo lectus, nec consequar neque.  Sed non accumsan urna.  Phasellus det condequar ex. Etiam eget manga laoreet, efficitur dolar consequat, tristique ligula."</p>
+        <span>Emanuel, Sr Strategist at Hiring.com</span>
+      </div>
     </div>
   </body>
 </html>
