added info section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="right-side">
         <h2>Learn something new everyday</h2>
-        <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+        <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
         <nav>
           <span>Start here</span>
         </nav>
@@ -38,6 +38,44 @@
         <h3>It's doesn't hurt to keep practicing</h3>
         <p>"Curabitur vitae libero in ipsum porttitor consequat.  Aliquam et commodo lectus, nec consequar neque.  Sed non accumsan urna.  Phasellus det condequar ex. Etiam eget manga laoreet, efficitur dolar consequat, tristique ligula."</p>
         <span>Emanuel, Sr Strategist at Hiring.com</span>
+      </div>
+      <div class="right-side">
+        <div class="orientation">
+          <div class="image">
+            <img src="./resources/images/information-orientation.jpg">
+          </div>
+          <div class="info">
+            <h4>Orientation date</h4>
+            <span>Tue 10/11 & Wed 10/12: 8am-3pm</span>
+            <nav>
+              <span>Read more</span>
+            </nav>
+          </div>
+        </div>
+        <div class="campus">
+          <div class="image">
+            <img src="./resources/images/information-campus.jpg">
+          </div>
+          <div class="info">
+            <h4>Our campus</h4>
+            <span>Find which campus is close by you</span>
+            <nav>
+              <span>Read more</span>
+            </nav>
+          </div>
+        </div>
+        <div class="guest">
+          <div class="image">
+            <img src="./resources/images/information-guest-lecture.jpg">
+          </div>
+          <div class="info">
+            <h4>Our guest lecture</h4>
+            <span>Join a keynote with Oliver Sack about music in medical treatment</span>
+            <nav>
+              <span>Read more</span>
+            </nav>
+          </div>
+        </div>
       </div>
     </div>
   </body>
