added courses row 1

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
       </div>
     </div>
-    <div class="practice">
+    <div class="info">
       <div class="left-side">
         <img src="./resources/images/information-main.jpg">
         <h3>It's doesn't hurt to keep practicing</h3>
@@ -74,6 +74,33 @@
             <nav>
               <span>Read more</span>
             </nav>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="learning">
+      <div class="title">
+        <span>Start learning</span>
+      </div>
+      <div class="sections">
+        <div class="row">
+          <div class="course">
+            <img src="./resources/images/course-software.jpg">
+            <h4>Software engineering</h4>
+            <span>COURSES</span>
+            <span>Web Development, Mobile Development, iOT, APIs</span>
+          </div>
+          <div class="course">
+            <img src="./resources/images/course-computer-art.jpg">
+            <h4>Computer art</h4>
+            <span>COURSES</span>
+            <span>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</span>
+          </div>
+          <div class="course">
+            <img src="./resources/images/course-design.jpg">
+            <h4>Design</h4>
+            <span>COURSES</span>
+            <span>User Experience Design, User Research, Visual Design</span>
           </div>
         </div>
       </div>
