added courses row 2

--- a/index.html
+++ b/index.html
@@ -103,6 +103,26 @@
             <span>User Experience Design, User Research, Visual Design</span>
           </div>
         </div>
+        <div class="row">
+          <div class="course">
+            <img src="./resources/images/course-data.jpg">
+            <h4>Data</h4>
+            <span>COURSES</span>
+            <span>Data Science, Big Data, SQL, Data Visualization</span>
+          </div>
+          <div class="course">
+            <img src="./resources/images/course-business.jpg">
+            <h4>Business</h4>
+            <span>COURSES</span>
+            <span>Product Development, Business Development, Startup</span>
+          </div>
+          <div class="course">
+            <img src="./resources/images/course-marketing.jpg">
+            <h4>Marketing</h4>
+            <span>COURSES</span>
+            <span>Analytics, Content Marketing, Mobile Marketing</span>
+          </div>
+        </div>
       </div>
     </div>
   </body>
