added thesis video

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <span>Emanuel, Sr Strategist at Hiring.com</span>
       </div>
       <div class="right-side">
-        <div class="orientation">
+        <div class="block">
           <div class="image">
             <img src="./resources/images/information-orientation.jpg">
           </div>
@@ -52,7 +52,7 @@
             </nav>
           </div>
         </div>
-        <div class="campus">
+        <div class="block">
           <div class="image">
             <img src="./resources/images/information-campus.jpg">
           </div>
@@ -64,7 +64,7 @@
             </nav>
           </div>
         </div>
-        <div class="guest">
+        <div class="block grey">
           <div class="image">
             <img src="./resources/images/information-guest-lecture.jpg">
           </div>
@@ -80,7 +80,7 @@
     </div>
     <div class="learning">
       <div class="title">
-        <span>Start learning</span>
+        <h3>Start learning</h3>
       </div>
       <div class="sections">
         <div class="row">
@@ -123,6 +123,17 @@
             <span>Analytics, Content Marketing, Mobile Marketing</span>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="thesis">
+      <div class="title">
+        <h3>Thesis Exhibit</h3>
+      </div>
+      <div class="left-side">
+        <video src="./resources/videos/thesis.mp4" autoplay>
+        </video>
+        <h4>Reimagine urban</h4>
+        <p>"Curabitur vitae libero in ipsum portitor consequat.  Aliquam et commodo lectus, nec consequat neque.  Sed non accumsan urna.  Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
       </div>
     </div>
   </body>
