--- a/index.html
+++ b/index.html
@@ -135,6 +135,26 @@
         <h4>Reimagine urban</h4>
         <p>"Curabitur vitae libero in ipsum portitor consequat.  Aliquam et commodo lectus, nec consequat neque.  Sed non accumsan urna.  Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
       </div>
+      <div class="right-side">
+        <div class="block grey">
+          <div class="image">
+            <img src="./resources/images/thesis-fisma.jpg">
+          </div>
+          <div class="info">
+            <h4>Fisma: Design and</h4>
+            <span>Designer showcase of new prototype product</span>
+          </div>
+        </div>
+        <div class="block">
+          <div class="image">
+            <img src="./resources/images/thesis-now-and-then.jpg">
+          </div>
+          <div class="info">
+            <h4>Now and then</h4>
+            <span>Research study about New York</span>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
