--- a/index.html
+++ b/index.html
@@ -156,5 +156,14 @@
         </div>
       </div>
     </div>
+    <footer>
+      <span>&copy2016 Colmar Academy. All rights reserved</span>
+      <nav>
+        <ul>
+          <li>Terms</li>
+          <li>Privacy</li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
