--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Colmar Academy</title>
   </head>
-  <body>
+  <body class = "desktop">
     <header>
       <div class="logo">
         <img src="./resources/images/ic-logo.svg">
@@ -165,5 +165,91 @@
         </ul>
       </nav>
     </footer>
+  </body>
+  <body class = "mobile">
+    <header>
+      <img src="./resources/images/ic-logo.svg">
+      <img src="./resources/images/ic-on-campus.svg">
+      <img src="./resources/images/ic-online.svg">
+      <img src="./resources/images/ic-login.svg">
+    </header>
+    <div class="blank">
+    </div>
+    <div class="learn-something">
+      <h2>Learn something new everyday</h2>
+      <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
+      <nav>
+        <span>Start here</span>
+      </nav>
+    </div>
+    <div class="information">
+      <div class="block">
+        <div class="image">
+          <img src="./resources/images/information-orientation.jpg">
+        </div>
+        <div class="info">
+          <h4>Orientation date</h4>
+          <span>Tue 10/11 & Wed 10/12: 8am-3pm</span>
+          <nav>
+            <span>Read more</span>
+          </nav>
+        </div>
+      </div>
+      <div class="block">
+        <div class="image">
+          <img src="./resources/images/information-campus.jpg">
+        </div>
+        <div class="info">
+          <h4>Our campus</h4>
+          <span>Find which campus is close by you</span>
+          <nav>
+            <span>Read more</span>
+          </nav>
+        </div>
+      </div>
+      <div class="block">
+        <div class="image">
+          <img src="./resources/images/information-guest-lecture.jpg">
+        </div>
+        <div class="info">
+          <h4>Our guest lecture</h4>
+          <span>Join a keynote with Oliver Sack about music in medical treatment</span>
+          <nav>
+            <span>Read more</span>
+          </nav>
+        </div>
+      </div>
+    </div>
+    <div class="start-learning">
+      <h3>Start learning</h3>
+      <div class="course">
+        <h4>Software engineering</h4>
+      </div>
+      <div class="course">
+        <h4>Computer art</h4>
+      </div>
+      <div class="course">
+        <h4>Design</h4>
+      </div>
+      <div class="course">
+        <h4>Data</h4>
+      </div>
+      <div class="course">
+        <h4>Business</h4>
+      </div>
+      <div class="course">
+        <h4>Marketing</h4>
+      </div>
+    </div>
+    <div class="thesis">
+      <div class="title">
+        <h3>Thesis Exhibit</h3>
+      </div>
+      <div class="video">
+        <video src="./resources/videos/thesis.mp4" autoplay>
+        </video>
+      </div>
+    </div>
+    <footer><span>&copy2016 Colmar Academy. All rights reserved</span></footer>
   </body>
 </html>
