--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Colmar Academy</title>
   </head>
   <body class = "desktop">
