--- a/index.html
+++ b/index.html
@@ -5,42 +5,186 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Colmar Academy</title>
   </head>
-  <body class = "desktop">
-    <header>
-      <div class="logo">
+  <body>
+    <div class = "desktop">
+      <header>
+        <div class="logo">
+          <img src="./resources/images/ic-logo.svg">
+          <span class = "colmar">COLMAR</span>
+          <span class = "academy">ACADEMY</span>
+        </div>
+          <nav>
+            <span>On campus</span>
+            <span>Online</span>
+            <span>For companies</span>
+            <span>Sign in</span>
+          </nav>
+      </header>
+      <div class="start">
+        <div class="left-side">
+          <img src="./resources/images/banner.jpg">
+        </div>
+        <div class="right-side">
+          <h2>Learn something new everyday</h2>
+          <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
+          <nav>
+            <span>Start here</span>
+          </nav>
+        </div>
+      </div>
+      <div class="info">
+        <div class="left-side">
+          <img src="./resources/images/information-main.jpg">
+          <h3>It's doesn't hurt to keep practicing</h3>
+          <p>"Curabitur vitae libero in ipsum porttitor consequat.  Aliquam et commodo lectus, nec consequar neque.  Sed non accumsan urna.  Phasellus det condequar ex. Etiam eget manga laoreet, efficitur dolar consequat, tristique ligula."</p>
+          <span>Emanuel, Sr Strategist at Hiring.com</span>
+        </div>
+        <div class="right-side">
+          <div class="block">
+            <div class="image">
+              <img src="./resources/images/information-orientation.jpg">
+            </div>
+            <div class="info">
+              <h4>Orientation date</h4>
+              <span>Tue 10/11 & Wed 10/12: 8am-3pm</span>
+              <nav>
+                <span>Read more</span>
+              </nav>
+            </div>
+          </div>
+          <div class="block">
+            <div class="image">
+              <img src="./resources/images/information-campus.jpg">
+            </div>
+            <div class="info">
+              <h4>Our campus</h4>
+              <span>Find which campus is close by you</span>
+              <nav>
+                <span>Read more</span>
+              </nav>
+            </div>
+          </div>
+          <div class="block grey">
+            <div class="image">
+              <img src="./resources/images/information-guest-lecture.jpg">
+            </div>
+            <div class="info">
+              <h4>Our guest lecture</h4>
+              <span>Join a keynote with Oliver Sack about music in medical treatment</span>
+              <nav>
+                <span>Read more</span>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="learning">
+        <div class="title">
+          <h3>Start learning</h3>
+        </div>
+        <div class="sections">
+          <div class="row">
+            <div class="course">
+              <img src="./resources/images/course-software.jpg">
+              <h4>Software engineering</h4>
+              <span>COURSES</span>
+              <span>Web Development, Mobile Development, iOT, APIs</span>
+            </div>
+            <div class="course">
+              <img src="./resources/images/course-computer-art.jpg">
+              <h4>Computer art</h4>
+              <span>COURSES</span>
+              <span>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</span>
+            </div>
+            <div class="course">
+              <img src="./resources/images/course-design.jpg">
+              <h4>Design</h4>
+              <span>COURSES</span>
+              <span>User Experience Design, User Research, Visual Design</span>
+            </div>
+          </div>
+          <div class="row">
+            <div class="course">
+              <img src="./resources/images/course-data.jpg">
+              <h4>Data</h4>
+              <span>COURSES</span>
+              <span>Data Science, Big Data, SQL, Data Visualization</span>
+            </div>
+            <div class="course">
+              <img src="./resources/images/course-business.jpg">
+              <h4>Business</h4>
+              <span>COURSES</span>
+              <span>Product Development, Business Development, Startup</span>
+            </div>
+            <div class="course">
+              <img src="./resources/images/course-marketing.jpg">
+              <h4>Marketing</h4>
+              <span>COURSES</span>
+              <span>Analytics, Content Marketing, Mobile Marketing</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="thesis">
+        <div class="title">
+          <h3>Thesis Exhibit</h3>
+        </div>
+        <div class="left-side">
+          <video src="./resources/videos/thesis.mp4" autoplay>
+          </video>
+          <h4>Reimagine urban</h4>
+          <p>"Curabitur vitae libero in ipsum portitor consequat.  Aliquam et commodo lectus, nec consequat neque.  Sed non accumsan urna.  Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+        </div>
+        <div class="right-side">
+          <div class="block grey">
+            <div class="image">
+              <img src="./resources/images/thesis-fisma.jpg">
+            </div>
+            <div class="info">
+              <h4>Fisma: Design and</h4>
+              <span>Designer showcase of new prototype product</span>
+            </div>
+          </div>
+          <div class="block">
+            <div class="image">
+              <img src="./resources/images/thesis-now-and-then.jpg">
+            </div>
+            <div class="info">
+              <h4>Now and then</h4>
+              <span>Research study about New York</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <span>&copy2016 Colmar Academy. All rights reserved</span>
+        <nav>
+          <ul>
+            <li>Terms</li>
+            <li>Privacy</li>
+          </ul>
+        </nav>
+      </footer>
+    </div>
+  </body>
+  <body>
+    <div class="mobile">
+      <header>
         <img src="./resources/images/ic-logo.svg">
-        <span class = "colmar">COLMAR</span>
-        <span class = "academy">ACADEMY</span>
+        <img src="./resources/images/ic-on-campus.svg">
+        <img src="./resources/images/ic-online.svg">
+        <img src="./resources/images/ic-login.svg">
+      </header>
+      <div class="blank">
       </div>
-      <nav>
-        <ul>
-          <li>On campus</li>
-          <li>Online</li>
-          <li>For companies</li>
-          <li>Sign in</li>
-        </ul>
-      </nav>
-    </header>
-    <div class="start">
-      <div class="left-side">
-        <img src="./resources/images/banner.jpg">
-      </div>
-      <div class="right-side">
+      <div class="learn-something">
         <h2>Learn something new everyday</h2>
         <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
         <nav>
           <span>Start here</span>
         </nav>
       </div>
-    </div>
-    <div class="info">
-      <div class="left-side">
-        <img src="./resources/images/information-main.jpg">
-        <h3>It's doesn't hurt to keep practicing</h3>
-        <p>"Curabitur vitae libero in ipsum porttitor consequat.  Aliquam et commodo lectus, nec consequar neque.  Sed non accumsan urna.  Phasellus det condequar ex. Etiam eget manga laoreet, efficitur dolar consequat, tristique ligula."</p>
-        <span>Emanuel, Sr Strategist at Hiring.com</span>
-      </div>
-      <div class="right-side">
+      <div class="information">
         <div class="block">
           <div class="image">
             <img src="./resources/images/information-orientation.jpg">
@@ -65,7 +209,7 @@
             </nav>
           </div>
         </div>
-        <div class="block grey">
+        <div class="block">
           <div class="image">
             <img src="./resources/images/information-guest-lecture.jpg">
           </div>
@@ -78,179 +222,37 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="learning">
-      <div class="title">
+      <div class="start-learning">
         <h3>Start learning</h3>
-      </div>
-      <div class="sections">
-        <div class="row">
-          <div class="course">
-            <img src="./resources/images/course-software.jpg">
-            <h4>Software engineering</h4>
-            <span>COURSES</span>
-            <span>Web Development, Mobile Development, iOT, APIs</span>
-          </div>
-          <div class="course">
-            <img src="./resources/images/course-computer-art.jpg">
-            <h4>Computer art</h4>
-            <span>COURSES</span>
-            <span>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</span>
-          </div>
-          <div class="course">
-            <img src="./resources/images/course-design.jpg">
-            <h4>Design</h4>
-            <span>COURSES</span>
-            <span>User Experience Design, User Research, Visual Design</span>
-          </div>
+        <div class="course">
+          <h4>Software engineering</h4>
         </div>
-        <div class="row">
-          <div class="course">
-            <img src="./resources/images/course-data.jpg">
-            <h4>Data</h4>
-            <span>COURSES</span>
-            <span>Data Science, Big Data, SQL, Data Visualization</span>
-          </div>
-          <div class="course">
-            <img src="./resources/images/course-business.jpg">
-            <h4>Business</h4>
-            <span>COURSES</span>
-            <span>Product Development, Business Development, Startup</span>
-          </div>
-          <div class="course">
-            <img src="./resources/images/course-marketing.jpg">
-            <h4>Marketing</h4>
-            <span>COURSES</span>
-            <span>Analytics, Content Marketing, Mobile Marketing</span>
-          </div>
+        <div class="course">
+          <h4>Computer art</h4>
+        </div>
+        <div class="course">
+          <h4>Design</h4>
+        </div>
+        <div class="course">
+          <h4>Data</h4>
+        </div>
+        <div class="course">
+          <h4>Business</h4>
+        </div>
+        <div class="course">
+          <h4>Marketing</h4>
         </div>
       </div>
+      <div class="thesis">
+        <div class="title">
+          <h3>Thesis Exhibit</h3>
+        </div>
+        <div class="video">
+          <video src="./resources/videos/thesis.mp4" autoplay>
+          </video>
+        </div>
+      </div>
+      <footer><span>&copy2016 Colmar Academy. All rights reserved</span></footer>
     </div>
-    <div class="thesis">
-      <div class="title">
-        <h3>Thesis Exhibit</h3>
-      </div>
-      <div class="left-side">
-        <video src="./resources/videos/thesis.mp4" autoplay>
-        </video>
-        <h4>Reimagine urban</h4>
-        <p>"Curabitur vitae libero in ipsum portitor consequat.  Aliquam et commodo lectus, nec consequat neque.  Sed non accumsan urna.  Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-      </div>
-      <div class="right-side">
-        <div class="block grey">
-          <div class="image">
-            <img src="./resources/images/thesis-fisma.jpg">
-          </div>
-          <div class="info">
-            <h4>Fisma: Design and</h4>
-            <span>Designer showcase of new prototype product</span>
-          </div>
-        </div>
-        <div class="block">
-          <div class="image">
-            <img src="./resources/images/thesis-now-and-then.jpg">
-          </div>
-          <div class="info">
-            <h4>Now and then</h4>
-            <span>Research study about New York</span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <footer>
-      <span>&copy2016 Colmar Academy. All rights reserved</span>
-      <nav>
-        <ul>
-          <li>Terms</li>
-          <li>Privacy</li>
-        </ul>
-      </nav>
-    </footer>
-  </body>
-  <body class = "mobile">
-    <header>
-      <img src="./resources/images/ic-logo.svg">
-      <img src="./resources/images/ic-on-campus.svg">
-      <img src="./resources/images/ic-online.svg">
-      <img src="./resources/images/ic-login.svg">
-    </header>
-    <div class="blank">
-    </div>
-    <div class="learn-something">
-      <h2>Learn something new everyday</h2>
-      <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
-      <nav>
-        <span>Start here</span>
-      </nav>
-    </div>
-    <div class="information">
-      <div class="block">
-        <div class="image">
-          <img src="./resources/images/information-orientation.jpg">
-        </div>
-        <div class="info">
-          <h4>Orientation date</h4>
-          <span>Tue 10/11 & Wed 10/12: 8am-3pm</span>
-          <nav>
-            <span>Read more</span>
-          </nav>
-        </div>
-      </div>
-      <div class="block">
-        <div class="image">
-          <img src="./resources/images/information-campus.jpg">
-        </div>
-        <div class="info">
-          <h4>Our campus</h4>
-          <span>Find which campus is close by you</span>
-          <nav>
-            <span>Read more</span>
-          </nav>
-        </div>
-      </div>
-      <div class="block">
-        <div class="image">
-          <img src="./resources/images/information-guest-lecture.jpg">
-        </div>
-        <div class="info">
-          <h4>Our guest lecture</h4>
-          <span>Join a keynote with Oliver Sack about music in medical treatment</span>
-          <nav>
-            <span>Read more</span>
-          </nav>
-        </div>
-      </div>
-    </div>
-    <div class="start-learning">
-      <h3>Start learning</h3>
-      <div class="course">
-        <h4>Software engineering</h4>
-      </div>
-      <div class="course">
-        <h4>Computer art</h4>
-      </div>
-      <div class="course">
-        <h4>Design</h4>
-      </div>
-      <div class="course">
-        <h4>Data</h4>
-      </div>
-      <div class="course">
-        <h4>Business</h4>
-      </div>
-      <div class="course">
-        <h4>Marketing</h4>
-      </div>
-    </div>
-    <div class="thesis">
-      <div class="title">
-        <h3>Thesis Exhibit</h3>
-      </div>
-      <div class="video">
-        <video src="./resources/videos/thesis.mp4" autoplay>
-        </video>
-      </div>
-    </div>
-    <footer><span>&copy2016 Colmar Academy. All rights reserved</span></footer>
   </body>
 </html>
